fix: adjust spacing to improve layout balance in ProjectComponent

--- a/src/app/main-page/portfolio/project/project.component.scss
+++ b/src/app/main-page/portfolio/project/project.component.scss
@@ -174,6 +174,7 @@
 }
 
 #p-switch {
+  margin-top: 16px;
   @include dFlex($jc: space-between);
 
   button,
@@ -192,6 +193,8 @@
     font-size: clamp(1.6rem, 3.333vw + 0.533rem, 1.8rem);
     font-weight: 700;
     color: $main-black;
+    min-width: 41px;
+    text-align: end;
   }
 }
 
@@ -225,7 +228,7 @@
 
   #p-switch {
     order: 0;
-    margin-bottom: 0;
+    margin-top: 0;
     margin-bottom: 24px;
   }
 
